--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-
-<!Doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-    <script type="text/javascript"  src= "../lib/p5min.js"></script>
-    <script type="text/javascript"  src="Tron.js"></script>
-    <script type="text/javascript"  src="Doublesnake.js"></script>
-    </head>
+	<head>
+	  <script src="libraries/p5.js" type="text/javascript"></script>
+	  <script src="sketch.js" type="text/javascript"></script>
+    <script src="tron.js" type="text/javascript"></script>
+	</head>
+  <body>
+  </body>
 </html>
