--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	  <script src="libraries/p5.js" type="text/javascript"></script>
-	  <script src="sketch.js" type="text/javascript"></script>
+	  <script src="snake.js" type="text/javascript"></script>
     <script src="tron.js" type="text/javascript"></script>
 	</head>
   <body>
